feat: Django Config

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -9,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 </head>
 
 <body>
@@ -89,48 +90,48 @@
 
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_2714.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_2714.jpeg' %}" alt="Nós aaaaaaaaaaaaaaa" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_2365.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_2365.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_2125.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_2125.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_1853.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_1853.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_1747.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_1747.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_1426.jpg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_1426.jpg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_0790.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_0790.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_0537.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_0537.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_0307.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_0307.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_8468.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_8468.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_8168.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_8168.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_7756.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_7756.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_6221.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_6221.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/img/IMG_5944.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="{% static 'core/img/IMG_5944.jpeg' %}" alt="Nós juntos" loading="lazy">
                 </div>
-            </div>
+            </div>            
         </div>
     </section>
 
@@ -141,7 +142,7 @@
 
             <div class="player-container">
                 <div class="album-cover">
-                    <img src="../assets/img/IMG_2714.jpeg" alt="Capa do álbum" id="album-cover">
+                    <img src="{% static 'core/img/IMG_2714.jpeg' %}" alt="Capa do álbum" id="album-cover">
                 </div>
 
                 <div class="track-info">
@@ -203,7 +204,7 @@
             <div class="moments-container">
                 <div class="moment-item">
                     <div class="moment-image">
-                        <img src="../assets/img/IMG_2714.jpeg" alt="Primeiro encontro">
+                        <img src="{% static 'core/img/IMG_2714.jpeg' %}" alt="Primeiro encontro">
                     </div>
                     <div class="moment-text">
                         <h3>Nosso Início</h3>
@@ -211,10 +212,10 @@
                             coração soube que tinha encontrado alguém especial.</p>
                     </div>
                 </div>
-
+                
                 <div class="moment-item">
                     <div class="moment-image">
-                        <img src="../assets/img/IMG_1747.jpeg" alt="Momentos juntos">
+                        <img src="{% static 'core/img/IMG_1747.jpeg' %}" alt="Momentos juntos">
                     </div>
                     <div class="moment-text">
                         <h3>Nossos Sorrisos</h3>
@@ -222,17 +223,17 @@
                             simples se tornam inesquecíveis.</p>
                     </div>
                 </div>
-
+                
                 <div class="moment-item">
                     <div class="moment-image">
-                        <img src="../assets/img/IMG_5944.jpeg" alt="Momentos especiais">
+                        <img src="{% static 'core/img/IMG_5944.jpeg' %}" alt="Momentos especiais">
                     </div>
                     <div class="moment-text">
                         <h3>Nossos Momentos</h3>
                         <p>Cada instante ao seu lado é uma nova aventura. Obrigado por tornar meus dias mais coloridos e
                             cheios de vida.</p>
                     </div>
-                </div>
+                </div>                
             </div>
         </div>
     </section>
@@ -247,7 +248,7 @@
 
     <div class="floating-hearts"></div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="{% static 'core/js/script.js' %}"></script>
 </body>
 
 </html>
