fix: correção menu de musicas

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -163,28 +163,28 @@
                 </div>
 
                 <div class="playlist">
-                    <div class="playlist-item active" data-src="" data-title="Mulher de Fases" data-artist="Raimundos">
+                    <div class="playlist-item active" data-src="{% static 'core/audio/mulher_de_fases.mp3' %}" data-title="Mulher de Fases" data-artist="Raimundos">
                         <div class="playlist-item-number">1</div>
                         <div class="playlist-item-info">
                             <div class="playlist-item-title">Mulher de Fases</div>
                             <div class="playlist-item-artist">Raimundos</div>
                         </div>
                     </div>
-                    <div class="playlist-item" data-src="" data-title="Medo Bobo" data-artist="Maiara e Maraisa">
+                    <div class="playlist-item" data-src="{% static 'core/audio/medo_bobo.mp3' %}" data-title="Medo Bobo" data-artist="Maiara e Maraisa">
                         <div class="playlist-item-number">2</div>
                         <div class="playlist-item-info">
                             <div class="playlist-item-title">Medo Bobo</div>
                             <div class="playlist-item-artist">Maiara e Maraisa</div>
                         </div>
                     </div>
-                    <div class="playlist-item" data-src="" data-title="Planos" data-artist="BK">
+                    <div class="playlist-item" data-src="{% static 'core/audio/planos_bk.mp3' %}" data-title="Planos" data-artist="BK">
                         <div class="playlist-item-number">3</div>
                         <div class="playlist-item-info">
                             <div class="playlist-item-title">Planos</div>
                             <div class="playlist-item-artist">BK</div>
                         </div>
                     </div>
-                    <div class="playlist-item" data-src="" data-title="Afrodite" data-artist="Delacruz">
+                    <div class="playlist-item" data-src="{% static 'core/audio/afrodite_delacruz.mp3' %}" data-title="Afrodite" data-artist="Delacruz">
                         <div class="playlist-item-number">4</div>
                         <div class="playlist-item-info">
                             <div class="playlist-item-title">Afrodite</div>
