fix: ajusted hero

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -27,6 +27,20 @@
 
     <link href="{% static 'home/css/tooplate-wedding-lite.css' %}" rel="stylesheet">
 
+    <style type="text/css">
+        .hero-container {
+        background-color: #d9d8d6;
+        background-image: url("{% static 'home/images/hero-cf.png' %}");
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: var(--border-radius-small);
+        position: relative;
+        overflow: hidden;
+        padding: 50px;
+        height: calc(90vh - 98px);
+        }
+    </style>
+
     <!--
 
     Tooplate 2131 Wedding Lite
