fix: ajusted bus media

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -30,7 +30,7 @@
     <style type="text/css">
         .hero-container {
         background-color: #d9d8d6;
-        background-image: url("{% static 'home/images/hero-cf.png' %}");
+        background-image: url("{% static 'home/images/hero.png' %}");
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: var(--border-radius-small);
