--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -27,10 +27,12 @@
 
     <link href="{% static 'home/css/tooplate-wedding-lite.css' %}" rel="stylesheet">
 
+    <link rel="shortcut icon" href="{% static 'core/img/favicon.png' %}" type="image/x-icon">
+
     <style type="text/css">
         .hero-container {
-        background-color: #d9d8d6;
-        background-image: url("{% static 'home/images/hero.png' %}");
+        background-color: #fff3fb;
+        background-image: url("{% static 'home/images/hero-es.png' %}");
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: var(--border-radius-small);
@@ -266,7 +268,7 @@
 
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                         <div class="image-hover-thumb">
-                            <img src="images/decorated-table-setting-wedding-celebration.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'home/images/galeria_de_fotos.png' %}" class="img-fluid" alt="">
                         </div>
 
                         <div class="section-block">
@@ -282,7 +284,7 @@
 
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                         <div class="image-hover-thumb">
-                            <img src="images/front-view-wedding-couple.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'home/images/carta.png' %}" class="img-fluid" alt="">
                         </div>
 
                         <div class="section-block">
@@ -298,7 +300,7 @@
 
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                         <div class="image-hover-thumb">
-                            <img src="images/front-view-wedding-couple.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'home/images/musica.png' %}" class="img-fluid" alt="">
                         </div>
 
                         <div class="section-block">
@@ -314,7 +316,7 @@
 
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                         <div class="image-hover-thumb">
-                            <img src="images/front-view-wedding-couple.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'home/images/contador.png' %}" class="img-fluid" alt="">
                         </div>
 
                         <div class="section-block">
@@ -330,7 +332,7 @@
 
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                         <div class="image-hover-thumb">
-                            <img src="images/front-view-wedding-couple.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'home/images/link.png' %}" class="img-fluid" alt="">
                         </div>
 
                         <div class="section-block">
@@ -339,6 +341,22 @@
                             <p class="mb-2">
                                 <i class="bi-link-45deg me-1"></i>
                                 URL privada para compartilhar com quem quiser
+                            </p>
+
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
+                        <div class="image-hover-thumb">
+                            <img src="{% static 'home/images/momentos.png' %}" class="img-fluid" alt="">
+                        </div>
+
+                        <div class="section-block">
+                            <h3 class="my-3">Eternize Momentos</h3>
+
+                            <p class="mb-2">
+                                <i class="bi-stopwatch me-1"></i>
+                                Momentos que serão para sempre únicos
                             </p>
 
                         </div>
@@ -405,8 +423,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-12">
                                         <div class="people-thumb image-hover-thumb">
-                                            <img src="images/people/attractive-laughing-guy-having-fun-smiling-happy.jpg"
-                                                class="people-image img-fluid" alt="">
+                                            <i class="bi-person depoimento-avatar"></i>
                                         </div>
                                     </div>
 
@@ -414,19 +431,15 @@
                                         <div class="section-block">
                                             <div class="d-flex align-items-center my-3">
                                                 <h4 class="mb-0">Ricardo</h4>
-
                                                 <span class="about-tag ms-2">Filho</span>
                                             </div>
-
-                                            <p>O presente perfeito para minha mãe no Dia das Mães. Eternizou nossa
-                                                história.</p>
+                                            <p class="depoimento-texto">O presente perfeito para minha mãe no Dia das Mães. Eternizou nossa história.</p>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-6 col-12">
                                         <div class="people-thumb image-hover-thumb">
-                                            <img src="images/people/portrait-handsome-attractive-young-man-posing.jpg"
-                                                class="people-image img-fluid" alt="">
+                                            <i class="bi-person depoimento-avatar"></i>
                                         </div>
                                     </div>
 
@@ -438,7 +451,7 @@
                                                 <span class="about-tag ms-2">Namorado</span>
                                             </div>
 
-                                            <p>Queria surpreender minha namorada com algo diferente... Quando vi esse
+                                            <p class="depoimento-texto">Queria surpreender minha namorada com algo diferente... Quando vi esse
                                                 site, soube na hora que era perfeito. Ela se emocionou demais, e eu
                                                 também. É um presente que fala um pouco da nossa historia.</p>
                                         </div>
@@ -451,8 +464,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-12">
                                         <div class="people-thumb image-hover-thumb">
-                                            <img src="images/people/lifestyle-people-emotions-casual-concept.jpg"
-                                                class="people-image img-fluid" alt="">
+                                            <i class="bi-person depoimento-avatar"></i>
                                         </div>
                                     </div>
 
@@ -464,7 +476,7 @@
                                                 <span class="about-tag ms-2">Namorada</span>
                                             </div>
 
-                                            <p>Achei fofo, achei lindo, achei muito criativo! Foi um presente muito
+                                            <p class="depoimento-texto">Achei fofo, achei lindo, achei muito criativo! Foi um presente muito
                                                 diferente e eu amei a criatividade dele. Mexeu muito comigo, eu adorei!
                                             </p>
                                         </div>
@@ -472,8 +484,7 @@
 
                                     <div class="col-lg-6 col-12">
                                         <div class="people-thumb image-hover-thumb">
-                                            <img src="images/people/portrait-beautiful-young-woman-standing-grey-wall.jpg"
-                                                class="people-image img-fluid" alt="">
+                                            <i class="bi-person depoimento-avatar"></i>
                                         </div>
                                     </div>
 
@@ -485,7 +496,7 @@
                                                 <span class="about-tag ms-2">Mãe</span>
                                             </div>
 
-                                            <p>Ganhar esse site foi como reviver todos os momentos com meu filho. É um
+                                            <p class="depoimento-texto">Ganhar esse site foi como reviver todos os momentos com meu filho. É um
                                                 presente cheio de amor, que vou guardar pra sempre!</p>
                                         </div>
                                     </div>
@@ -617,7 +628,7 @@
                                 </div>
                             </div>
 
-                            <h5 class="mb-4">Se interessou?<span class="text-muted">Deixa seu contato que eu falo com você!</span></h5>
+                            <h5 class="mb-4">Se interessou? <span class="text-muted">Deixa seu contato que eu falo com você!</span></h5>
 
                             <form class="custom-form rsvp-form" role="form">
                                 <div class="row">
