--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -31,7 +31,11 @@
 
     <style type="text/css">
         .hero-container {
-        background-image: url("{% static 'home/images/hero-es.png' %}");
+            background-image: url("{% static 'home/images/hero-es.png' %}");
+        }
+
+        .site-footer {
+            background-image: url("{% static 'home/images/footer.png' %}");
         }
     </style>
 
@@ -79,7 +83,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+            <a href="/" class="navbar-brand mx-auto mx-lg-0">
                 <span>Love</span>
                 <i class="bi-heart brand-icon"></i>
                 <span>Stories</span>
@@ -139,7 +143,7 @@
                             <h4 class="save-the-date-title">Save the date</h4>
 
                             <div class="save-the-date-body">
-                                <span class="date">11 de maio de 2025</span>
+                                <span class="date">12 de junho de 2025</span>
                             </div>
                         </div>
                     </div>
@@ -425,7 +429,8 @@
                                                 <h4 class="mb-0">Ricardo</h4>
                                                 <span class="about-tag ms-2">Filho</span>
                                             </div>
-                                            <p class="depoimento-texto">O presente perfeito para minha mãe no Dia das Mães. Eternizou nossa história.</p>
+                                            <p class="depoimento-texto">O presente perfeito para minha mãe no Dia das
+                                                Mães. Eternizou nossa história.</p>
                                         </div>
                                     </div>
 
@@ -443,7 +448,8 @@
                                                 <span class="about-tag ms-2">Namorado</span>
                                             </div>
 
-                                            <p class="depoimento-texto">Queria surpreender minha namorada com algo diferente... Quando vi esse
+                                            <p class="depoimento-texto">Queria surpreender minha namorada com algo
+                                                diferente... Quando vi esse
                                                 site, soube na hora que era perfeito. Ela se emocionou demais, e eu
                                                 também. É um presente que fala um pouco da nossa historia.</p>
                                         </div>
@@ -468,7 +474,8 @@
                                                 <span class="about-tag ms-2">Namorada</span>
                                             </div>
 
-                                            <p class="depoimento-texto">Achei fofo, achei lindo, achei muito criativo! Foi um presente muito
+                                            <p class="depoimento-texto">Achei fofo, achei lindo, achei muito criativo!
+                                                Foi um presente muito
                                                 diferente e eu amei a criatividade dele. Mexeu muito comigo, eu adorei!
                                             </p>
                                         </div>
@@ -488,7 +495,8 @@
                                                 <span class="about-tag ms-2">Mãe</span>
                                             </div>
 
-                                            <p class="depoimento-texto">Ganhar esse site foi como reviver todos os momentos com meu filho. É um
+                                            <p class="depoimento-texto">Ganhar esse site foi como reviver todos os
+                                                momentos com meu filho. É um
                                                 presente cheio de amor, que vou guardar pra sempre!</p>
                                         </div>
                                     </div>
@@ -620,7 +628,8 @@
                                 </div>
                             </div>
 
-                            <h5 class="mb-4">Se interessou? <span class="text-muted">Deixa seu contato que eu falo com você!</span></h5>
+                            <h5 class="mb-4">Se interessou? <span class="text-muted">Deixa seu contato que eu falo com
+                                    você!</span></h5>
 
                             <form class="custom-form rsvp-form" role="form">
                                 <div class="row">
@@ -677,7 +686,7 @@
                         <h4 class="mb-4">Visite-nos</h4>
 
                         <p>Brasília - DF, Distrito Federal, Brasil
-                          
+
                         </p>
                     </div>
 
@@ -730,7 +739,7 @@
             <div class="row">
 
                 <div class="col-lg-3 col-12 mx-auto">
-                    <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+                    <a href="/" class="navbar-brand mx-auto mx-lg-0">
                         <span>Love</span>
                         <i class="bi-heart brand-icon"></i>
                         <span>Stories</span>
